--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -1,3 +1,10 @@
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .section-login {
   display: flex;
   justify-content: center;
@@ -12,14 +19,43 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   background-color: #fff3f5;
-  border-radius: 1.2rem;
+  border-radius: 1rem;
+  opacity: 0;
+  transform: translateY(20px);
+  overflow: hidden;
+  transition: height 0.4s ease, max-height 0.4s ease, padding 0.4s ease;
+  animation: fadeInUp 0.9s ease forwards;
+}
+
+.div-master-login.login-mode {
+  max-height: 45rem;
+  padding: 2rem;
+}
+
+.div-master-login.register-mode {
+  max-height: 50rem;
+  padding: 4rem;
 }
 
 .separacao-login {
   width: 1px;
-  height: 35rem; /* ajusta conforme necessário */
+  height: 35rem;
+  background-color: black;
+  border: none;
+  overflow: hidden;
+  transition: height 0.7s ease, max-height 0.4s ease, padding 0.4s ease;
+}
+
+.separacao-login.login-mode {
+  width: 1px;
+  height: 40rem;
+}
+
+.separacao-login.register-mode {
+  width: 1px;
+  height: 45rem;
   background-color: black;
   border: none;
 }
@@ -27,20 +63,18 @@
 .div-title-login {
   display: flex;
   flex-direction: column;
+  padding: 8rem;
   align-items: center;
   justify-content: center;
-  max-width: 60rem;
+  max-width: 70rem;
   gap: 6rem;
-  padding-left: 5rem;
-}
-
-.div-title-login h1 {
-  color: #eb5858;
-}
-
-.div-title-login p {
-  font-size: 1.5rem;
-  font-weight: bold;
+  & > h1 {
+    color: #eb5858;
+  }
+  & > p {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
 }
 
 .login-container {
@@ -50,45 +84,67 @@
   gap: 3rem;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.3s ease forwards;
+  & > h2 {
+    font-size: 2.5rem;
+    color: #e63535d0;
+  }
 }
 
-.login-container h2 {
-  font-size: 2.5rem;
-  color: #e63535d0;
+.div-login {
+  & > form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 35rem;
+  }
+
+  & > form input {
+    height: 3rem;
+    border: none;
+    border-radius: 0.5rem;
+    padding: 2rem;
+    outline: none;
+    background-color: #222;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
+
+  & > form button {
+    background-color: #e63535d0;
+    outline: none;
+    border: none;
+    color: white;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    font-size: 1.7rem;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+
+  & > form button:hover {
+    background-color: #e7982fce;
+  }
 }
 
-.div-login form {
+.div-account {
   display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  width: 35rem;
-}
-
-.div-login form input {
-  height: 3rem;
-  border: none;
-  border-radius: 0.5rem;
-  padding: 2rem;
-  outline: none;
-  background-color: #222;
-  color: white;
+  justify-content: space-between;
+  color: black;
   font-size: 1.4rem;
   font-weight: bold;
-}
+  margin-top: 1rem;
+  & > a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    transition: color 0.3s ease;
+  }
 
-.div-login form button {
-  background-color: #e63535d0;
-  outline: none;
-  border: none;
-  color: white;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  font-size: 1.7rem;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-  cursor: pointer;
-}
-
-.div-login form button:hover {
-  background-color: #e7982fce;
+  & > a:hover {
+    color: rgb(34, 58, 163);
+  }
 }
